# cmake-pybind11-install

./: CMakeLists.txt  README.md  setup.py
scikit_build/: __init__.py
scikit_build/foo/: bar.py
scikit_build/scikit/: __init__.py
src/: CMakeLists.txt
src/add/: CMakeLists.txt  add.cpp
src/add/include/add/: add.h
src/multiply/: multiply.cpp
src/scikit_build_example/: __init__.py
src/subtract/: subtract.cpp
src/wrappers/: add_interface.cpp
tests/: test_basic.py
